--- a/gb/18/1/18/n10067893.md
+++ b/gb/18/1/18/n10067893.md
@@ -6,15 +6,15 @@
 <hr>
 	<p>【大纪元2018年01月18日讯】（大纪元记者曾薇心编译报导）韩国人气男星朴宝剑最近虽未接演戏剧，但近日以嘉宾身份参与《孝利家民宿2》拍摄工作，本周也参与平昌冬奥圣火传递活动。在17日播出的日本节目《PON!》中，朴宝剑谈及，自己想成为带给人们正面影响的演员。</p>
 <p>朴宝剑日前接受《PON!》专访时，对于记者称赞他是目前韩国最有人气的演员，他谦虚笑说：“我吗？真是过奖了呢。”他表示自己受到许多人的关心与爱护，而他真的满怀感谢。</p>
-<figure id="attachment_10068314" aria-describedby="caption-attachment-10068314" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/180118055923100707.jpg"><img class="size-large wp-image-10068314" title="" src="https://i.epochtimes.com/assets/uploads/2018/01/180118055923100707-600x342.jpg" alt="" width="600" b="342" /></a><figcaption id="caption-attachment-10068314" class="wp-caption-text">朴宝剑接受《PON!》专访时表示，受到许多人的关心与爱护，自己真的满心感谢。（视频截图）</figcaption></figure>
+<figure id="attachment_10068314" aria-describedby="caption-attachment-10068314" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/180118055923100707.jpg"><img fetchpriority="high" decoding="async" class="size-large wp-image-10068314" title="" src="https://i.epochtimes.com/assets/uploads/2018/01/180118055923100707-600x342.jpg" alt="" width="600" b="342" /></a><figcaption id="caption-attachment-10068314" class="wp-caption-text">朴宝剑接受《PON!》专访时表示，受到许多人的关心与爱护，自己真的满心感谢。（视频截图）</figcaption></figure>
 <p>访谈中朴宝剑也谈及，希望自己能够透过戏剧带给大家共鸣，并表示：“我想成为一位能带给大家正面影响的演员。”</p>
 <p>在日本也有超高人气的朴宝剑，日本节目《PON!》在17日播出的内容中，除了简单介绍朴宝剑的戏剧作品《请回答1988》及《云画的月光》外，也采访了朴宝剑本人以及朴宝剑的日本粉丝。</p>
 <p>该节目谈及，去年12月24日朴宝剑于日本举行粉丝见面会，吸引约一万名粉丝参加，而《PON!》节目记者也借机询问日本粉丝对朴宝剑的印象。</p>
-<figure id="attachment_10068316" aria-describedby="caption-attachment-10068316" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/180118055917100707.jpg"><img class="size-large wp-image-10068316" title="" src="https://i.epochtimes.com/assets/uploads/2018/01/180118055917100707-600x336.jpg" alt="" width="600" b="336" /></a><figcaption id="caption-attachment-10068316" class="wp-caption-text">朴宝剑于去年圣诞夜于日本举行粉丝见面会。（视频截图）</figcaption></figure>
+<figure id="attachment_10068316" aria-describedby="caption-attachment-10068316" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/180118055917100707.jpg"><img decoding="async" class="size-large wp-image-10068316" title="" src="https://i.epochtimes.com/assets/uploads/2018/01/180118055917100707-600x336.jpg" alt="" width="600" b="336" /></a><figcaption id="caption-attachment-10068316" class="wp-caption-text">朴宝剑于去年圣诞夜于日本举行粉丝见面会。（视频截图）</figcaption></figure>
 <p>其中，粉丝们谈及“宝剑真的像天使一样。”“希望能把孙子教育成像宝剑那样的孩子。”“很有礼貌又非常谦虚，鞠躬都鞠90度。”</p>
-<figure id="attachment_10068315" aria-describedby="caption-attachment-10068315" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/180118055920100707.jpg"><img class="size-large wp-image-10068315" title="" src="https://i.epochtimes.com/assets/uploads/2018/01/180118055920100707-600x398.jpg" alt="" width="600" b="398" /></a><figcaption id="caption-attachment-10068315" class="wp-caption-text">日本粉丝认为朴宝剑非常谦虚。（视频截图）</figcaption></figure>
+<figure id="attachment_10068315" aria-describedby="caption-attachment-10068315" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/180118055920100707.jpg"><img decoding="async" class="size-large wp-image-10068315" title="" src="https://i.epochtimes.com/assets/uploads/2018/01/180118055920100707-600x398.jpg" alt="" width="600" b="398" /></a><figcaption id="caption-attachment-10068315" class="wp-caption-text">日本粉丝认为朴宝剑非常谦虚。（视频截图）</figcaption></figure>
 <p>一名日本的高龄粉丝受访时笑说：“他就像是没有翅膀的天使。哈哈哈我这把年纪的阿婆还这样说！”激动的模样也引来其他粉丝一阵笑声。</p>
-<figure id="attachment_10068038" aria-describedby="caption-attachment-10068038" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/180118040356100707.jpg"><img class="size-large wp-image-10068038" title="" src="https://i.epochtimes.com/assets/uploads/2018/01/180118040356100707-600x342.jpg" alt="" width="600" b="342" /></a><figcaption id="caption-attachment-10068038" class="wp-caption-text">日本粉丝认为朴宝剑就像是没有翅膀的天使。（视频截图）</figcaption></figure>
+<figure id="attachment_10068038" aria-describedby="caption-attachment-10068038" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/180118040356100707.jpg"><img decoding="async" class="size-large wp-image-10068038" title="" src="https://i.epochtimes.com/assets/uploads/2018/01/180118040356100707-600x342.jpg" alt="" width="600" b="342" /></a><figcaption id="caption-attachment-10068038" class="wp-caption-text">日本粉丝认为朴宝剑就像是没有翅膀的天使。（视频截图）</figcaption></figure>
 <p>责任编辑：梁梦竹</p>
 	
 <strong>相关新闻：</strong>
@@ -24,29 +24,29 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/3/n9801143.md#1">平昌奥运传递圣火开跑 秀智曝《无挑》大合照</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/23/n10418231.md#1" target="_blank">晓明：一个枪口余生者的人生之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10948448.md#1" target="_blank">新年感恩 中国百姓盼李洪志大师早日回国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258805.md#1">【未解之谜】遇难总能呈祥？盘点蒋介石身边的那些高人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258188.md#1">摄生高人孙思邈的神通与道行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14258987.md#1">高智晟律师风骨纪实 韩亦言笔下动人心魄的传奇人物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/20/n14254177.md#1">【古道人生】命中利北不利南 在南方一试难中 在北方则隆隆直上</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263404.md#1">【远见快评】总参统计的六四遇难者数据惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/7/n14243167.md#1">为何吃降压药仍中风？中医5策略帮你自然降血压</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263434.md#1">【军事热点】香格里拉对话 美中道不同不相为谋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260428.md#1">Costco高级会员资格四大缺点 鲜为人知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262233.md#1">英伟达CEO黄仁勋言论 令五毛炸锅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262641.md#1">美国航母遭袭击？ 中共官媒传谣被打脸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262423.md#1">《沙丘2》2024目前最卖座 导演却失望 盼被取代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262219.md#1">汤唯晒与孔刘合照 粉丝惊喜直呼画面美</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262195.md#1">“那英跑调”登热搜榜第一 《歌手5》大洗牌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263337.md#1">《庆余年2》又现穿帮镜头 屋顶有智能手机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263308.md#1">汤唯放闪导演丈夫：他有6岁男孩的好奇心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14257411.md#1">老化导致头发脱落、变白 7种营养素让头发回春</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262341.md#1">绿叶蔬菜保存 简单4诀窍延长保鲜期</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262121.md#1">【美食天堂】鲜虾春卷做法～酥脆好吃！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262424.md#1">研究：柳橙皮有助于改善心脏健康</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/13/n14248231.md#1">【健康养成记】不闪腰不背痛 5招强化后背力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308276.md#1">珍珠粉有助延缓衰老 改善睡眠 预防骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308560.md#1">【车评】红章的“R” 2024 Honda Civic Type R</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/1/18/n10067893.htm">朴宝剑受访：想成为带给人正面影响的演员</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/18/1/18/n10067893.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
